<?xml version="1.0"?>
<package format="2">
  <name>pcd2bag</name>
  <version>0.0.0</version>
  <description>Read pcd files and publish ros pointcloud2</description>

  <maintainer email="elifaksutasdelen@todo.todo">elifaksutasdelen</maintainer>

  <license>TODO</license>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>eigen</depend>
  <depend>libpcl-all-dev</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_omp_registration</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>velodyne_pointcloud</depend>

  <export>
  </export>
</package>
